@@ -1,0 +1,46 @@
+<!doctype html>
+<html class="no-js" lang="">
+
+<head>
+  <meta charset="utf-8">
+  <title>Cd Up</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <style>
+    h1 {
+      text-align: center;
+    }
+    div.container {
+      min-height: 10em;
+      display: table-cell;
+      margin-left: auto;
+      margin-right: auto;
+      width: 0.6em
+    }
+    table.warning {
+      color: black;
+      background-color: #cccc44;
+      border-color: yellow;
+      border-style: solid;
+    }
+  </style>
+</head>
+
+
+<body>
+  <h1>Cd Up</h1>
+
+  <hr>
+
+  <div class="container">
+    <p>Navigate up one folder in the Explorer View of the <a href="qrc:/resources/help/editor/resources/resources_tree_help.html">Resource Viewer</a>.</p>
+
+    <br>
+
+    <p>This button is only visible if the Resource Viewer is in compact form and only affects its Explorer View.
+    In the Tree View it does nothing.</p>
+  </div>
+</body>
+
+</html>
