@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Resource Tree</title>
+  <title>Resource Viewer</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -29,7 +29,7 @@
 
 
 <body>
-  <h1>Resource Tree</h1>
+  <h1>Resource Viewer</h1>
 
   <hr>
 
@@ -41,11 +41,34 @@
 
     <br>
 
-    <p>An alternative to adding <a href="qrc:/resources/help/editor/resources/resource_help.html">Resources</a>
-    via the <a href="qrc:/resources/help/editor/addresource_button_help.html">Add Resource Button</a>,
-    is to drag-and-drop the files from the explorer into the resource tree.</p>
+    <p>The <a href="qrc:/resources/help/editor/resources/resource_help.html">Resources</a>
+    can be displayed in two different views: The Tree View and the Explorer View.</p>
 
     <br>
+
+    <p>The <a href="qrc:/resources/help/editor/resources/resource_help.html">Resources</a>
+    are sorted by category and name, but in the Tree View, the sorting can be changed by clicking on the tree header.</p>
+
+    <h2>Tree View</h2>
+
+    <p>In the Tree View all <a href="qrc:/resources/help/editor/resources/resource_help.html">Resources</a>
+    are displayed in a filesystem tree to provide an overview over all Resources. The columns show
+    information such as the path in the <a href="qrc:/resources/help/project/joi_project_help.html">JOI-Project's</a> folder and Resource type.
+    Hovering over a Resource shows you the <a href="qrc:/resources/help/editor/source_button_help.html">Source String</a> of the Resource.</p>
+
+    <h2>Explorer View</h2>
+
+    <p>In the Explorer View only the <a href="qrc:/resources/help/editor/resources/resource_help.html">Resources</a>
+    in the currently viewed folder are displayed. Image and Video type Resources show a small preview of the content.
+    Hovering over a Resource shows you the <a href="qrc:/resources/help/editor/source_button_help.html">Source String</a> of the Resource.</p>
+
+    <h2>Adding Resources</h2>
+
+    <p>An alternative to adding <a href="qrc:/resources/help/editor/resources/resource_help.html">Resources</a>
+    via the <a href="qrc:/resources/help/editor/addresource_button_help.html">Add Resource Button</a>,
+    is to drag-and-drop the files from the operation system's explorer into the Resource Viewer.</p>
+
+    <h2>Editing Resources</h2>
 
     <p><a href="qrc:/resources/help/editor/resources/resource_help.html">Resources</a>
     can be renamed by double-clicking the name field. Renaming a resource changes it's internal
